--- a/YuZhiLai2/app/build.gradle
+++ b/YuZhiLai2/app/build.gradle
@@ -20,7 +20,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.zhy:autolayout:1.4.5'
+    compile 'com.android.support:recyclerview-v7:25.1.1'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0-RC3'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.0-RC1'
+    compile 'com.xhb:xbanner:1.2.2'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
